# code-trainer-offsec-pipeline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  remaining_repos.txt
docs/ReadyTensor Submission/: Captstone-1.md  Captstone-2.md  LLMED Program Module 1 Project_ Fine-Tune Your First Custom LLM.html  publication-module2.md  publication.md
docs/enhancements/v2.1/: specialized-data-offensive-security.md
docs/eval/: phase3-summary.json  phase3-summary.md  phase4-benchmark-gsm8k-base.json  phase4-benchmark-gsm8k.json
docs/model_cards/: code-trainer-vision-adapter.md  qwen14b-code-trainer-v6-aggressive-full3.md  qwen14b-code-trainer-v6-aggressive.md  qwen14b-code-trainer-v6-gguf.md
docs/plan/: Code-Trainer-V6-RTX5060Ti-Single-GPU.md  Inference-Agent-Architecture .md  ROADMAP.md
docs/sweep/: phase4a-summary.json  phase4a-summary.md  phase4b-eval-full.json  phase4b-result.json  phase4b-summary.md
scripts/: smoke_test_train_entry.sh
src/config/: offsec_config.yaml  settings.py  v6_config.yaml
src/phase1_data_collection/capture/: parallel_capture.py  screenshot_manager.py  theme_manager.py  vscode_automation.py
src/phase1_data_collection/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/phase1_data_collection/scrapers/: file_filter.py  github_scraper.py  offsec_keywords.py  offsec_scraper.py  quality_scorer.py  sqlite_catalog.py
src/phase2_preprocessing/: __init__.py
src/phase5_deployment/gguf/: converter.py  (+1 more)
src/phase6_inference/: README.md  __init__.py
src/scripts/: render_publication_charts.py  sync_model_cards.py
(+57 files in other folders)
